Change select plugin name from "bgl" to "bluegene"

--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -219,7 +219,7 @@ Acceptable values include
 "select/linear" for a one-dimentional array of nodes in which 
 sequentially ordered nodes are preferable, and
 "select/bluegene" for a three-dimentional Blue Gene system. 
-The default value is "select/bgl" for Blue Gene systems 
+The default value is "select/bluegene" for Blue Gene systems 
 and "select/linear" for all other systems.
 .TP
 \fBSlurmUser\fR
