Move node selection logic into new plugin (needed for Blue Gene).

--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -13,8 +13,8 @@ documents those changes that are of interest to users and admins.
  -- srun cancels created job if job step creation fails
  -- Added a lots of Blue Gene/L support logic: slurmd executes on a single 
     node to front-end the 512-CPU base-partitions (Blue Gene/L's nodes)
- -- Add SelectType configuration parameter for node selection plugin
- -- Add node selection plugin infrastructure (still need to move logic)
+ -- Add node selection plugin infrastructure, relocate existing logic 
+    to select/linear, add configuration parameter SelectType
  -- Modify node hashing algorithm for better performance on Blue Gene/L
 
 * Changes in SLURM 0.4.0-pre1
