--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -16,6 +16,7 @@ documents those changes that are of interest to users and admins.
  -- Add node selection plugin infrastructure, relocate existing logic 
     to select/linear, add configuration parameter SelectType
  -- Modify node hashing algorithm for better performance on Blue Gene/L
+ -- Add ability to specify node ranges for 3-D rectangular prism
 
 * Changes in SLURM 0.4.0-pre1
 =============================
