--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -1,6 +1,9 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.4.0-pre3
+=============================
+
 * Changes in SLURM 0.4.0-pre2
 =============================
  -- NOTE: "startclean" when transitioning from version 0.4.0-pre1, JOBS ARE LOST
