--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.4.0-pre3
 =============================
+ -- Send SIGTERM to batch script before SIGKILL for mpirun cleanup on 
+    Blue Gene/L
 
 * Changes in SLURM 0.4.0-pre2
 =============================
