--- a/branches/slurm-0-3-branch/NEWS
+++ b/branches/slurm-0-3-branch/NEWS
@@ -1,6 +1,10 @@
 This file describes changes in recent versions of SLURM. It primarily
 documents those changes that are of interest to users and admins. 
 
+* Changes in SLURM 0.3.8
+========================
+ -- Create new allocation as needed for debugger in case old allocation
+    has been purged
 
 * Changes in SLURM 0.3.7
 ========================
