--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -5,6 +5,8 @@ documents those changes that are of interest to users and admins.
 =============================
  -- Send SIGTERM to batch script before SIGKILL for mpirun cleanup on 
     Blue Gene/L
+ -- Create new allocation as needed for debugger in case old allocation 
+    has been purged
 
 * Changes in SLURM 0.4.0-pre2
 =============================
