--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
     Blue Gene/L
  -- Create new allocation as needed for debugger in case old allocation 
     has been purged
+ -- Add Blue Gene User Guide to html documents
 
 * Changes in SLURM 0.4.0-pre2
 =============================
