--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -11,6 +11,8 @@ documents those changes that are of interest to users and admins.
  -- Fix srun bug that could cause seg fault with --no-shell option if not 
     running under a debugger
  -- Propogate job's task count (if set) for batch job via SLURM_NPROCS.
+ -- Add new job parameters for Blue Gene: geometry, rotate, mode (virtual
+    or co-processor), and communications type (mesh or torus).
 
 * Changes in SLURM 0.4.0-pre2
 =============================
