--- a/trunk/doc/man/man3/slurm_free_job_info_msg.3
+++ b/trunk/doc/man/man3/slurm_free_job_info_msg.3
@@ -1,6 +1,7 @@
-.TH "Slurm API" "3" "June 2004" "Morris Jette" "Slurm job information reporting functions"
+.TH "Slurm API" "3" "September 2004" "Morris Jette" "Slurm job information reporting functions"
 .SH "NAME"
 slurm_free_job_info_msg, slurm_get_end_time,
+slurm_get_select_jobinfo,
 slurm_load_jobs, slurm_pid2jobid, 
 slurm_print_job_info, slurm_print_job_info_msg
 \- Slurm job information reporting functions
@@ -63,8 +64,29 @@ void \fBslurm_print_job_info_msg\fR (
 	int \fIone_liner\fP
 .br 
 );
+.LP
+int \fBslurm_get_select_jobinfo\fR (
+.br
+	select_jobinfo_t \fIjobinfo\fP,
+.br
+	enum select_data_type \fIdata_type\fP, 
+.br
+	void *\fIdata\fP
+);
+
 .SH "ARGUMENTS"
 .TP 
+\fIdata_type\fP
+Identifies the type of data to retrieve \fIjobinfo\fP. Note that different types of 
+data are associated with different computer types and different configurations. 
+.TP
+\fIdata\fP
+The data value identified with \fIdata_type\fP is returned in the location specified
+by \fIdata\fP. If a type of data is requested that does not exist on a particular 
+computer type or configuration, \fBslurm_get_select_jobinfo\fR returns an error.
+See the slurm.h header file for identification of the data types associated 
+with each value of \fIdata_type\fP.
+.TP
 \fIend_time_ptr\fP
 Specified a pointer to a storage location into which the expected termination 
 time of a job is placed.
@@ -88,6 +110,10 @@ placed.
 .TP 
 \fIjob_info_msg_ptr\fP
 Specifies the pointer to the structure created by \fBslurm_load_jobs\fR. 
+.TP
+\fIjobinfo\fP
+Job-specific information as constructed by Slurm's NodeSelect plugin.
+This data object is returned for each job by the \fBslurm_load_jobs\fR function.
 .TP 
 \fIjob_pid\fP
 Specifies a process id of some process on the current node.
@@ -215,7 +241,27 @@ int main (int argc, char *argv[])
 .br
 			job_buffer_ptr->job_array[i].user_id);
 .br
-	}			
+	}
+.LP
+	if (job_buffer_ptr->record_count >= 1) {
+.br
+		uint16_t rotate;
+.br
+		if (slurm_get_select_jobinfo(
+.br
+			job_buffer_ptr->job_array[0].select_jobinfo,
+.br
+			SELECT_DATA_ROTATE,
+.br
+			&rotate) == SLURM_SUCCESS)
+.br
+			printf("JobId=%u Rotate=%u\\n",
+.br
+				job_buffer_ptr->job_array[0].job_id, 
+.br
+				rotate);
+.br
+	}
 .LP
 	slurm_free_job_info_msg (job_buffer_ptr);
 .LP
