Clarify use of AllowGroups option with respect to user root.

--- a/trunk/doc/man/man5/slurm.conf.5
+++ b/trunk/doc/man/man5/slurm.conf.5
@@ -488,9 +488,14 @@ within a single partition. The partition configuration
 file contains the following information: 
 .TP
 \fBAllowGroups\fR
-Comma separated list of group IDs which may use the partition. 
-If at least one group associated with the user submitting the 
+Comma separated list of group IDs which may execute jobs in the partition. 
+If at least one group associated with the user attempting to execute the 
 job is in AllowGroups, he will be permitted to use this partition.
+Jobs executed as user root can use any partition without regard to
+the value of AllowGroups.
+If user root attempts to execute a job as another user (e.g. using 
+srun's \-\-uid option), this other user must be in one of groups 
+identified by AllowGroups for the job to succesfully execute.
 The default value is "ALL". 
 .TP
 \fBDefault\fR
