Update node use option name, was --mode, now --node-use.

--- a/trunk/doc/man/man1/srun.1
+++ b/trunk/doc/man/man1/srun.1
@@ -362,8 +362,9 @@ If NAV, or if not set, then SLURM will try to fit a TORUS else MESH.
 \fB\-R\fR, \fB\-\-no-rotate\fR
 Disables rotation of the job's requested geometry in order to fit an 
 appropriate partition.
+By default the specified geometry can rotate in three dimensions.
 .TP
-\fB\-\-mode\fR=\fItype\fR
+\fB\-\-node-use\fR=\fItype\fR
 Specify the mode of node operation. 
 On Blue Gene the acceptable of \fItype\fR are VIRTUAL (applications 
 to use both processors on each c\-node) and COPROCESSOR (second 
