--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -15,6 +15,8 @@ documents those changes that are of interest to users and admins.
     or co-processor), communications type (mesh or torus), and partition ID.
  -- Exercise a bunch of new switch plugin functions for Federation 
     switch support.
+ -- Fix bug in scheduling jobs when a processor count is specified
+    and FastSchedule=0 and the cluster is heterogeneous.
 
 * Changes in SLURM 0.4.0-pre2
 =============================
