--- a/branches/slurm-0-3-branch/NEWS
+++ b/branches/slurm-0-3-branch/NEWS
@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
     has been purged
  -- Fix bug in scheduling jobs when a processor count is specified 
     and FastSchedule=0 and the cluster is heterogeneous.
+ -- Fix srun bug when --input, --output and --error are all "none"
 
 * Changes in SLURM 0.3.7
 ========================
