--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
  -- Add support for NodeHostname in node configuration
  -- Make "scontrol show daemons" function properly on front-end system 
     (e.g. Blue Gene)
+ -- Fix srun bug when --input, --output and --error are all "none"
 
 * Changes in SLURM 0.4.0-pre3
 =============================
