--- a/trunk/NEWS
+++ b/trunk/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.4.0-pre4
 =============================
+ -- Fixes for reported problems:
+   - slurm/512: Let job steps run on DRAINING nodes
  -- Add support for MPICH-GM (from takao.hatazaki@hp.com)
  -- Add support for NodeHostname in node configuration
  -- Make "scontrol show daemons" function properly on front-end system 
