--- a/branches/slurm-0-3-branch/NEWS
+++ b/branches/slurm-0-3-branch/NEWS
@@ -3,6 +3,8 @@ documents those changes that are of interest to users and admins.
 
 * Changes in SLURM 0.3.9
 ========================
+ -- Fixes for reported problems:
+   - slurm/512: Let job steps run on DRAINING nodes
  -- Create new allocation as needed for debugger in case old allocation
     has been purged
  -- Fix bug in scheduling jobs when a processor count is specified 
